--- a/reactjs_blog/public/index.html
+++ b/reactjs_blog/public/index.html
@@ -1,43 +1,107 @@
+<!-- Html5 -->
 <!DOCTYPE html>
+
+<!-- this page is  language english -->
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
+<head>
+    <!-- title -->
+    <title>SPA(Single Page Application)</title>
+
+    <!-- Türkce karakter -->
+    <meta charset="UTF-8" />
+
+    <!-- favicon (NOT: src klasörü public tarafında görünmez, istersen public'e kopyalayıp yolu düzelt) -->
+    <link
+            rel="icon"
+            href="../src/shared/assets/images/pictures/main1.jpg"
+            type="image/x-icon"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <!-- other browser -->
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+
+    <!-- Responsive Design -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- SEO -->
+    <meta name="author" content="Hamit Mızrak" />
+    <meta name="designer" content="Hamit Mızrak" />
+    <meta name="copyright" content="Hamit Mızrak" />
+    <meta name="owner" content="Hamit Mızrak" />
+    <meta
+            name="description"
+            content="Html5,css3,js,jquery,bootstrap,java,database "
+    />
+    <meta
+            name="keyword"
+            content="Html5,css3,js,jquery,bootstrap,java,database "
+    />
+    <meta name="title" content="Full Stack Developer" />
+    <meta name="theme-color" content="#000000" />
+    <meta name="robots" content="index, follow" />
+    <meta name="googlebot" content="index, follow" />
+    <meta name="google" content="notranslate" />
+    <meta name="revised" content="Monday, 1st January 2024, 5:00 pm" />
+    <meta name="language" content="Turkish" />
+    <meta name="url" content="" />
+    <meta name="identifier-URL" content="" />
+    <meta name="coverage" content="Worldwide" />
+    <meta name="distribution" content="Global" />
+    <meta name="rating" content="General" />
+    <meta name="revisit-after" content="1 days" />
+    <meta name="google-site-verification" content="" />
+    <meta name="msvalidate.01" content="" />
+    <meta name="yandex-verification" content="" />
+    <meta name="alexaVerifyID" content="" />
+    <meta name="p:domain_verify" content="" />
+    <meta
+            name="application-name"
+            content="SPA(Single Page Application)"
+    />
+    <meta name="msapplication-TileColor" content="#000000" />
+    <meta
+            name="msapplication-TileImage"
+            content="../../pictures/main1.jpg"
+    />
+    <meta
+            name="apple-mobile-web-app-title"
+            content="SPA(Single Page Application)"
+    />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta
+            name="apple-mobile-web-app-status-bar-style"
+            content="black-translucent"
+    />
+
     <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
+      DİKKAT:
+      - Daha önce buraya ../node_modules/... link ve script'leri koyuyordum.
+      - Artık HEPSİ index.js içinde import ediliyor.
+      - CDN de yok, sadece node_modules kullanılıyor.
     -->
-  </body>
+</head>
+
+<body
+        data-bs-spy="scroll"
+        data-bs-target="#navbar_second"
+        data-bs-offset="100"
+        tabindex="0"
+>
+<noscript>
+    <div class="alert alert-danger text-center">
+        <strong>Uyarı!</strong>
+        Sizin browserinız javascripti desteklemiyor. Lütfen JavaScript'i
+        çalıştıracak güncel bir browser deneyiniz.
+    </div>
+</noscript>
+
+<!-- ROOT -->
+<div id="root"></div>  <!-- This brings up the React main screen.-->
+<p class="text-danger">lorem</p>  <!-- for the bootstrap test-->
+
+<!--
+  React build sistemi (CRA / Vite vs.) bundle'ı buraya otomatik enjekte edecek.
+  Herhangi bir <script src="../node_modules/..."> veya CDN yazmıyoruz.
+-->
+</body>
 </html>
