--- a/reactjs_blog/public/index.html
+++ b/reactjs_blog/public/index.html
@@ -97,7 +97,7 @@
 
 <!-- ROOT -->
 <div id="root"></div>  <!-- This brings up the React main screen.-->
-<p class="text-danger">lorem</p>  <!-- for the bootstrap test-->
+<!-- <p class="text-danger">lorem</p>   for the bootstrap test-->
 
 <!--
   React build sistemi (CRA / Vite vs.) bundle'ı buraya otomatik enjekte edecek.
