Unnecessary plugin deleted

--- a/reactjs_blog/public/index.html
+++ b/reactjs_blog/public/index.html
@@ -96,8 +96,7 @@
 </noscript>
 
 <!-- ROOT -->
-<div id="root"></div>  <!-- This brings up the React main screen.-->
-<!-- <p class="text-danger">lorem</p>   for the bootstrap test-->
+<div id="root"></div>
 
 <!--
   React build sistemi (CRA / Vite vs.) bundle'ı buraya otomatik enjekte edecek.
